Fixing background overflow glitch

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,7 @@ body {
 
 app-root {
     min-height: 100%;
+    height: 100%;
     display: block;
     .container-fluid {
         padding-left: 0;
